# chardiff_html

./: README.md  pyproject.toml
chardiff_html/: __init__.py  chardiff_html.py
tests/: test_chardiff_html.py
