[tool.poetry]
name = "chardiff_html"
version = "0.1.1"
description = ""
authors = ["Tomoaki Nakamura <tyo_yo@icloud.com>"]
readme = "README.md"
homepage = "https://github.com/tyo-yo/chardiff_html"
repository = "https://github.com/tyo-yo/chardiff_html"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
